<resources>
    <string name="app_name">Hayate</string>

    <!-- LoadingActivity -->
    <string name="copy_right">CopyRight 2016&#8211;2020</string>

    <!-- LoginActivity -->
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="username_input_hint">账号</string>
    <string name="password_input_hint">密码</string>
    <string name="password_input_correct">密码不符合要求</string>

    <!-- RegisterActivity -->
    <string name="password_condition">密码(6&#8211;20位)</string>
    <string name="code_input_title">输入验证码</string>
    <string name="code_input_error">验证码错误</string>
    <string name="code_send_already">验证码已发送至: </string>
    <string name="code_resend">重新发送</string>
    <string name="code_second">s</string>
    <string name="code_email_hint">未找到验证码邮件, 请查看垃圾邮件</string>

    <!-- PasswordForgetActivity -->
    <string name="password_forget">忘记密码</string>

    <!-- PasswordResetActivity -->
    <string name="password_reset_title">重置密码</string>
    <string name="password_new_condition">新密码(6&#8211;20位)</string>

    <!-- MainActivity -->
    <string name="main_first">场景一</string>
    <string name="main_second">场景二</string>
    <string name="main_mall">场景三</string>
    <string name="main_profile">个人中心</string>

    <!-- ProfileFragment -->
    <string name="profile">个人信息</string>
    <string name="profile_common">通用</string>
    <string name="profile_support">支持</string>
    <string name="profile_feedback">反馈</string>
    <string name="profile_version_update">版本升级</string>
    <string name="user_password_modify">修改密码</string>

    <!-- ProfileDetailActivity -->
    <string name="profile_setting">个人信息</string>
    <string name="nickname">昵称</string>
    <string name="sex">性别</string>
    <string name="birthday">出生年月</string>
    <string name="password_modify">修改密码</string>
    <string name="user_id">疾风号</string>
    <string name="profile_icon">头像</string>
    <string name="nickname_modify">更改名字</string>
    <string name="nickname_input_hint">昵称</string>
    <string name="profile_image_type">修改头像</string>
    <string name="image_camera">拍照</string>
    <string name="image_local">本地图片</string>
    <string name="secret">就不告诉你</string>
    <string name="male">小哥哥</string>
    <string name="female">小姐姐</string>
    <string name="logout">退出</string>
    <string name="logout_message">确认退出当前帐号?</string>

    <!-- FeedbackCenterActivity -->
    <string name="feedback_submit">提交</string>
    <string name="feedback_problem_description">请输入反馈意见</string>
    <string name="feedback_account">账号: </string>

    <!-- PasswordModifyActivity -->
    <string name="password_old">当前密码</string>
    <string name="password_new">新密码(6&#8211;20位)</string>
    <string name="password_confirm">确认密码(6&#8211;20位)</string>
    <string name="password_confirm_error">密码不一致</string>
    <string name="password_wifi_length_hint">请输入8位以上的WiFi密码</string>
    
    <!-- 升级 -->
    <string name="check_update">检测升级</string>
    <string name="app_update">应用升级</string>
    <string name="version_latest">已是最新版本</string>
    <string name="app_version_update_message">新版本:%s, 是否立即升级?</string>
    <string name="app_download_background">应用后台下载中&#8230;</string>
    <string name="app_download_error">下载出错,请稍后重试!</string>

    <!-- 测试 -->
    <string name="dialog_edit">DialogEdit</string>
    <string name="dialog_edit_message">This is a dialog edit message</string>
    <string name="dialog_edit_hint">Input dialog edit message</string>
    <string name="dialog_text">DialogText</string>
    <string name="dialog_text_message">This is a dialog text message</string>
</resources>
