<menu xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
      tools:context="com.mvvm.hayate.view.main.MainActivity">
    <item
            android:id="@+id/item_device"
            android:icon="@drawable/selector_bottom_device"
            android:title="@string/main_first"/>

    <item
            android:id="@+id/item_scene"
            android:icon="@drawable/selector_bottom_scene"
            android:title="@string/main_second"/>

    <item
            android:id="@+id/item_mall"
            android:icon="@drawable/selector_bottom_mall"
            android:title="@string/main_mall"/>

    <item
            android:id="@+id/item_profile"
            android:icon="@drawable/selector_bottom_profile"
            android:title="@string/main_profile"/>
</menu>
