<?xml version="1.0" encoding="utf-8"?>
<layout>
	
	<data>
		
		<variable
				name="vm"
				type="com.mvvm.hayate.vm.profile.PasswordModifyVm"/>
	</data>
	
	<LinearLayout
			xmlns:android="http://schemas.android.com/apk/res/android"
			xmlns:app="http://schemas.android.com/apk/res-auto"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical">
		
		<com.mvvm.component.uc.widget.AppBarView
				onNavigationClick="@{vm.onNavigationClick}"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				app:textTitle="@string/user_password_modify"/>
		
		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="@dimen/activity_margin_double"
				android:orientation="vertical">
			
			<com.google.android.material.textfield.TextInputLayout
					errorHint="@{vm.passwordOldError}"
					android:layout_width="match_parent"
					android:hint="@string/password_old"
					android:layout_height="wrap_content"
					app:errorEnabled="@{vm.passwordOldErrorEnabled}"
					app:passwordToggleEnabled="true">
				
				<com.google.android.material.textfield.TextInputEditText
						android:layout_width="match_parent"
						android:layout_height="48dp"
						android:inputType="textPassword"
						android:text="@={vm.model.oldPassword}"/>
			
			</com.google.android.material.textfield.TextInputLayout>
			
			<com.google.android.material.textfield.TextInputLayout
					errorHint="@{vm.passwordNewError}"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/password_new"
					app:errorEnabled="@{vm.passwordNewErrorEnabled}"
					app:passwordToggleEnabled="true">
				
				<com.google.android.material.textfield.TextInputEditText
						android:layout_width="match_parent"
						android:layout_height="48dp"
						android:inputType="textPassword"
						android:text="@={vm.model.newPassword}"/>
			
			</com.google.android.material.textfield.TextInputLayout>
			
			<com.google.android.material.textfield.TextInputLayout
					errorHint="@{vm.passwordCfmError}"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/password_confirm"
					app:errorEnabled="@{vm.passwordCfmErrorEnabled}"
					app:passwordToggleEnabled="true">
				
				<com.google.android.material.textfield.TextInputEditText
						android:layout_width="match_parent"
						android:layout_height="48dp"
						android:inputType="textPassword"
						android:text="@={vm.model.cfmPassword}"/>
			
			</com.google.android.material.textfield.TextInputLayout>
			
			<com.google.android.material.button.MaterialButton
					style="@style/Widget.MaterialComponents.Button.Blue"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="@dimen/activity_vertical_margin"
					android:enabled="@{vm.completeEnabled}"
					android:onClick="@{vm.onCompleteClick}"
					android:text="@string/complete"/>
		</LinearLayout>
	</LinearLayout>
</layout>

